@@ -1,3 +1,8 @@
+2006-01-18  Alexander Olk  <alex.olk@googlemail.com>
+
+	* ThemeClearlooks.cs: Removed some unneeded code.
+	* ThemeGtk.cs: First part of ThemeGtk enhancements.
+
 2006-01-17  Peter Dennis Bartok  <pbartok@novell.com>
 
 	* LinkLabel.cs: We need to update the hover drawing when
